--- a/product.html
+++ b/product.html
@@ -357,7 +357,7 @@ const products = {
     'p49': {
         title: 'ماكينة برشام',
         description: 'ماكينة برشام للتثبيت السريع والفعال، تتميز بالقوة والمتانة، مما يجعلها أداة أساسية في مشاغل التصنيع والصيانة.',
-        images: ['.ماكينة برشام.jpg'],
+        images: ['5.jpg'],
         link: 'https://m.me/107394622435055'
     },
     'p50': {
