--- a/مسامير.html
+++ b/مسامير.html
@@ -43,7 +43,7 @@
     <h3>ماكينة برشام</h3>
 </div>
 <div class="product-card" onclick="window.location.href='product.html?product=p49'">
-    <img src=".ماكينة برشام.jpg" alt="ماكينة برشام">
+    <img src="5.jpg" alt="ماكينة برشام">
     <h3>ماكينة برشام</h3>
 </div>
 <div class="product-card" onclick="window.location.href='product.html?product=p41'">
