--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
     <h3>مقابض اشكال و الوان مختلفة</h3>
     <p></p>
 </div>
+<div class="product" onclick="window.location.href='product.html?product=p48'">
+    <img src="استيكر ذهبي وفضي.jpg" alt="مقابض اشكال و الوان مختلفة">
+    <h3>مقابض اشكال و الوان مختلفة</h3>
+    <p></p>
+</div>
+
 
         </section>
     </main>
