--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> المنتجات - الوطنية المتحدة جروب</title>
-    <link rel="stylesheet" href="products.css">
-   <link rel="stylesheet" href="home.css">
+    <title>المنتجات - الوطنية المتحدة جروب</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="responsive.css"> <!-- Responsive Stylesheet -->
 </head>
+
 <body>
     <header>
         <div class="header-container">
             <div class="logo">الوطنية المتحدة جروب</div>
+            <span class="toggle-icon" onclick="openNav()">&#9776;</span>
             <nav>
                 <ul>
                     <li><a href="index.html">الرئيسية</a></li>
-	            <li><a href="products.html">المنتجات</a></li>
-                    </li>
+                    <li><a href="products.html">المنتجات</a></li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">تواصل معنا</a>
                         <div class="dropdown-content">
@@ -25,53 +26,97 @@
                     </li>
                 </ul>
             </nav>
+        </div>
     </header>
+
+    <!-- Sidenav -->
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">الرئيسية</a>
+        <a href="products.html">المنتجات</a>
+        <a href="https://m.me/107394622435055">فيسبوك</a>
+        <a href="https://wa.me/201018067085">واتساب</a>
+    </div>
 
     <main>
         <section class="hero">
             <h1>مرحبًا بكم في الوطنية المتحدة</h1>
-            <p>متجركم الشامل للفيبر والإكسسوارات و مستلزمات الديكور</p>
+            <p>متجركم الشامل للفيبر والإكسسوارات و الالومينيوم</p>
             <button onclick="window.location.href='products.html'">تسوق الآن</button>
+
+            <!-- Scroll down arrow -->
+            <div class="scroll-down-arrow">
+                &#9660; <!-- Unicode for a downward arrow -->
+            </div>
         </section>
 
         <section class="products-overview">
             <h2>منتجات مميزة</h2>
             <div class="product-list">
-<div class="product" onclick="window.location.href='product.html?product=p5'">
-    <img src="الواح فيبر سالوميل.jpg" alt="الواح فيبر سالوميل">
-    <h3>الواح فيبر سالوميل</h3>
-    <p></p>
-</div>
-<div class="product" onclick="window.location.href='product.html?product=p6'">
-    <img src="الواح فيبر اشكال طبيعية.jpg" alt="الواح فيبر اشكال طبيعية">
-    <h3>الواح فيبر اشكال طبيعية</h3>
-    <p></p>
-</div>
-<div class="product" onclick="window.location.href='product.html?product=p7'">
-    <img src="قطاعاتps.jpg" alt="قطاعاتps">
-    <h3>قطاعاتps</h3>
-    <p></p>
-</div>
-
-<div class="product" onclick="window.location.href='product.html?product=p50'">
-    <img src="مقابض اشكال و الوان مختلفة.jpg" alt="مقابض اشكال و الوان مختلفة">
-    <h3>مقابض اشكال و الوان مختلفة</h3>
-    <p></p>
-</div>
-<div class="product" onclick="window.location.href='product.html?product=p48'">
-    <img src="استيكر ذهبي وفضي.jpg" alt="مقابض اشكال و الوان مختلفة">
-    <h3>مقابض اشكال و الوان مختلفة</h3>
-    <p></p>
-</div>
-
+                    <div class="product-card" onclick="window.location.href='product.html?product=p5'">
+                        <img src="الواح فيبر سالوميل.jpg" alt="الواح فيبر سالوميل">
+                        <h3>الواح فيبر سالوميل</h3>
+                    </div>
+                 <div class="product-card" onclick="window.location.href='product.html?product=p6'">
+                        <img src="الواح فيبر اشكال طبيعية.jpg" alt="الواح فيبر اشكال طبيعية">
+                        <h3>الواح فيبر اشكال طبيعية</h3>
+                 </div>
+                    <div class="product-card" onclick="window.location.href='product.html?product=p7'">
+                        <img src="قطاعاتps.jpg" alt="قطاعات PS">
+                        <h3>قطاعات PS</h3>
+                    </div>
+                   <div class="product-card" onclick="window.location.href='product.html?product=p50'">
+                    <img src="مقابض اشكال و الوان مختلفة.jpg" alt="مقابض اشكال و الوان مختلفة">
+                    <h3>مقابض اشكال و الوان مختلفة</h3>
+                </div>
+            </div>
+        <section class="products-overview">
+            <h2>عجل</h2>
+            <div class="product-category">
+                <div class="products-grid">
+                    <div class="product-card" onclick="window.location.href='product.html?product=p1'">
+                        <img src="عجل سلك معدن.jpg" alt="عجل سلك معدن">
+                        <h3>عجل سلك معدن</h3>
+                    </div>
+                    <div class="product-card" onclick="window.location.href='product.html?product=p2'">
+                        <img src="عجل زجاج.jpg" alt="عجل زجاج">
+                        <h3>عجل زجاج</h3>
+                    </div>
+                    <div class="product-card" onclick="window.location.href='product.html?product=p3'">
+                        <img src="عجل ps.jpg" alt="عجل ps">
+                        <h3>عجل ps</h3>
+                    </div>
+                    <div class="product-card" onclick="window.location.href='product.html?product=p4'">
+                        <img src="عجل ثلاجة بفرامل و بدون.jpg" alt="عجل ثلاجة بفرامل و بدون">
+                        <h3>عجل ثلاجة بفرامل و بدون</h3>
+                    </div>
+                </div>
+            </div>
 
         </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 الوطنية المتحدة. جميع الحقوق محفوظة.</p>
     </footer>
 
-    <script src="products.js"></script>
+    <script>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+
+        // Close sidenav when clicking outside
+        document.addEventListener('click', function(event) {
+            var sidenav = document.getElementById("mySidenav");
+            var toggle = document.querySelector(".toggle-icon");
+            if (!sidenav.contains(event.target) && event.target !== toggle && sidenav.style.width === "250px") {
+                closeNav();
+            }
+        });
+    </script>
 </body>
 </html>
