--- a/كوالين.html
+++ b/كوالين.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> المنتجات - الوطنية المتحدة جروب</title>
-    <link rel="stylesheet" href="products.css">
+    <title>المنتجات - الوطنية المتحدة جروب</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Main stylesheet -->
+    <link rel="stylesheet" href="responsive.css"> <!-- Responsive stylesheet -->
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <div class="header-container">
             <div class="logo">الوطنية المتحدة جروب</div>
+            <span class="toggle-icon" onclick="openNav()">&#9776;</span>
             <nav>
                 <ul>
                     <li><a href="index.html">الرئيسية</a></li>
-	            <li><a href="products.html">المنتجات</a></li>
-                    </li>
+                    <li><a href="products.html">المنتجات</a></li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">تواصل معنا</a>
                         <div class="dropdown-content">
@@ -24,62 +26,63 @@
                     </li>
                 </ul>
             </nav>
+        </div>
     </header>
 
-    <main>
-        <section class="products-list">
-            <h1>منتجاتنا</h1>
-    <div class="product-category">
-        <div class="products-grid">
-<div class="product-card" onclick="window.location.href='product.html?product=p26'">
-    <img src="كالون فندقي.jpg" alt="كالون فندقي">
-    <h3>كالون فندقي</h3>
-</div>
-<div class="product-card" onclick="window.location.href='product.html?product=p27'">
-    <img src="كالون سؤاس.jpg" alt="كالون سؤاس">
-    <h3>كالون سؤاس</h3>
-</div>
-<div class="product-card" onclick="window.location.href='product.html?product=p28'">
-    <img src="كالون تركي.jpg" alt="كالون تركي">
-    <h3>كالون تركي</h3>
-</div>
-
-            </div>
+    <!-- Sidenav -->
+    <div id="mySidenav" class="sidenav">
+        <a href="index.html">الرئيسية</a>
+        <a href="products.html">المنتجات</a>
+        <a href="https://m.me/107394622435055">فيسبوك</a>
+        <a href="https://wa.me/201018067085">واتساب</a>
     </div>
+
+    <!-- Main Content -->
+    <main>
+             <section class="products-list">
+            <h1>منتجاتنا</h1>
+            <div class="product-category">
+                <div class="products-grid">
+                    <div class="product-card" onclick="window.location.href='product.html?product=p26'">
+                        <img src="كالون فندقي.jpg" alt="كالون فندقي">
+                        <h3>كالون فندقي</h3>
+                    </div>
+                    <div class="product-card" onclick="window.location.href='product.html?product=p27'">
+                        <img src="كالون سؤاس.jpg" alt="كالون سؤاس">
+                        <h3>كالون سؤاس</h3>
+                    </div>
+                    <div class="product-card" onclick="window.location.href='product.html?product=p28'">
+                        <img src="كالون تركي.jpg" alt="كالون تركي">
+                        <h3>كالون تركي</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 الوطنية المتحدة. جميع الحقوق محفوظة.</p>
     </footer>
-<script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const dropdowns = document.querySelectorAll('.dropdown');
-            
-            dropdowns.forEach(dropdown => {
-                const toggle = document.createElement('button');
-                toggle.className = 'dropdown-toggle';
-                toggle.textContent = dropdown.querySelector('.dropbtn').textContent;
 
-                dropdown.insertBefore(toggle, dropdown.querySelector('.dropbtn'));
-                dropdown.querySelector('.dropbtn').style.display = 'none';
+    <!-- Script for Sidenav -->
+    <script>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
 
-                toggle.onclick = function() {
-                    dropdown.classList.toggle('active');
-                };
-            });
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
 
-            document.onclick = function(event) {
-                if (!event.target.matches('.dropdown-toggle')) {
-                    dropdowns.forEach(drop => {
-                        if (drop.classList.contains('active')) {
-                            drop.classList.remove('active');
-                        }
-                    });
-                }
-            };
+        document.addEventListener('click', function(event) {
+            var sidenav = document.getElementById("mySidenav");
+            var toggle = document.querySelector(".toggle-icon");
+
+            if (!sidenav.contains(event.target) && event.target !== toggle && sidenav.style.width === "250px") {
+                closeNav();
+            }
         });
     </script>
-
-    <script src="products.js"></script>
 </body>
 </html>
