--- a/products.html
+++ b/products.html
@@ -82,7 +82,7 @@
             <div class="product-category">
                 <h2>الألومنيوم</h2>
                 <div class="products-grid">
-                    <div class="product-card" onclick="window.location.href='p7.html'">
+                     <div class="product-card" onclick="window.location.href='product.html?product=p7'">
                         <img src="قطاعاتps.jpg" alt="قطاعات PS">
                         <h3>قطاعات PS</h3>
                     </div>
