--- a/index.html
+++ b/index.html
@@ -486,27 +486,27 @@
                     <!-- Product Card 1 -->
                     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="zoom-in">
                         <div class="card product-card h-100" onclick="window.location.href='product.html?product=p35'">
-                            <img src="سلك فيبر مقاسات عرض 150 -120 - 100.jpg" class="card-img-top" alt="سلك فيبر مقاسات عرض 150 -120 - 100" loading="lazy">
+                            <img src="فرش1.jpg" class="card-img-top" alt="فرش1" loading="lazy">
                             <div class="card-body">
-                                <h5 class="card-title">سلك فيبر مقاسات عرض 150 -120 - 100</h5>
+                                <h5 class="card-title">فرش1</h5>
                             </div>
                         </div>
                     </div>
                     <!-- Product Card 2 -->
                     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="zoom-in" data-aos-delay="100">
                         <div class="card product-card h-100" onclick="window.location.href='product.html?product=p36'">
-                            <img src="سلك الومنيوم ناشف مقاسات عرض 150 -120 - 100.jpg" class="card-img-top" alt="سلك الومنيوم ناشف مقاسات عرض 150 -120 - 100" loading="lazy">
+                            <img src="كاوتش مقاسات.jpg" class="card-img-top" alt="كاوتش مقاسات" loading="lazy">
                             <div class="card-body">
-                                <h5 class="card-title">سلك الومنيوم ناشف مقاسات عرض 150 -120 - 100</h5>
+                                <h5 class="card-title">كاوتش مقاسات</h5>
                             </div>
                         </div>
                     </div>
                     <!-- Product Card 3 -->
                     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="zoom-in" data-aos-delay="200">
                         <div class="card product-card h-100" onclick="window.location.href='product.html?product=p37'">
-                            <img src="سلك الومنيوم بحريني مقاسات عرض 150 -120 - 100.jpg" class="card-img-top" alt="سلك الومنيوم بحريني مقاسات عرض 150 -120 - 100" loading="lazy">
+                            <img src="كاوتش تركي.jpg" class="card-img-top" alt="كاوتش تركي" loading="lazy">
                             <div class="card-body">
-                                <h5 class="card-title">سلك الومنيوم بحريني مقاسات عرض 150 -120 - 100</h5>
+                                <h5 class="card-title">كاوتش تركي</h5>
                             </div>
                         </div>
                     </div>
