--- a/products.html
+++ b/products.html
@@ -67,8 +67,8 @@
                         <h3>سلك ألومنيوم وفايبر</h3>
                     </div>
                     <div class="product-card" onclick="window.location.href='مانع أتربة - فرش و كاوتش.html'">
-                        <img src="فرش.jpg" alt="مانع أتربة - فرش">
-                        <h3>مانع أتربة - فرش و كاوتش</h3>
+                        <img src="فرش.jpg" alt="فرش و كاوتش">
+                        <h3>فرش و كاوتش</h3>
                     </div>
                     <div class="product-card" onclick="window.location.href='كوالين.html'">
                         <img src="كالون.jpg" alt="كوالين">
